[mypy]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-numpy.testing]
ignore_missing_imports = True

[mypy-ipromise]
ignore_missing_imports = True

[mypy-scipy.special]
ignore_missing_imports = True

[flake8]
max-line-length=79
ignore=I100, W503, E731, E741, N802, N806
exclude=__init__.py,__pycache__,backup,README.rst

[isort]
line_lenth=79
known_first_party=
known_third_party=ipromise,jax
multi_line_output=0

[pycodestyle]
max-line-length=79
exclude=__init__.py,__pycache__,backup,README.rst

[tool:pytest]

[metadata]
long_description = file: README.rst

[aliases]
test=pytest

[pytype]
disable=ignored-abstractmethod
